# fastapi-start

./: .gitignore  LICENSE  README.md  app_settings.txt  requirements.txt
core/: __init__.py  singleton.py
core/base/: app_config.py
deploy/: Dockerfile  gunicorn_conf.py  start-reload.sh  start.sh
server/: fastapi_server.py
server/api/: config_api.py  health_api.py  security_api.py
server/data/: demo.yaml
swagger_server/: docker-compose.yaml  openapi.yaml  setup.cfg
swagger_server/.openapi-generator/: FILES
swagger_server/src/http_server/: main.py  security_api.py
swagger_server/src/http_server/apis/: config_api.py  config_api_base.py  health_api.py  health_api_base.py
swagger_server/src/http_server/models/: api_response.py
swagger_server/tests/: conftest.py  test_config_api.py  test_health_api.py
