[metadata]
name = http_server
version = 0.0.1
description = This is a demo start for fastAPI
long_description = file: README.md
keywords = OpenAPI Stem
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
